implement email templates part 1
